# Eelbrain

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  env-dev.yml  pyproject.toml  setup.py
doc/: changes.rst  development.rst  experiment.rst  reference.rst
doc/static/: environment.yml
eelbrain/: __init__.py  _data_obj.py  _exceptions.py  _info.py  gui.py  pipeline.py
eelbrain/_experiment/: __init__.py  configuration.py  covariance.py  data.py  epoch_rejection.py  events.py  exceptions.py  groups.py  gui.py  load_pipeline.py  logging.py  migration.py  pathing.py  pipeline.py  state_model.py  variable_def.py
eelbrain/_experiment/derivative_cache/: __init__.py  base.py  garbage_collection.py
eelbrain/_experiment/derivative_cache/tests/: test_derivative_cache.py
eelbrain/_experiment/epochs/: __init__.py  config.py  nodes.py
eelbrain/_experiment/parc/: __init__.py  config.py  nodes.py
eelbrain/_experiment/preprocessing/: __init__.py  config.py  nodes.py
eelbrain/_experiment/preprocessing/tests/: test_nodes.py
eelbrain/_experiment/source/: __init__.py  config.py  nodes.py
eelbrain/_experiment/statistics/: __init__.py  config.py  nodes.py  two_stage_nodes.py
eelbrain/_experiment/statistics/tests/: test_config.py
eelbrain/_experiment/tests/: sample_experiment.py  sample_experiment_sessions.py  test_acquisition.py  test_definitions.py  test_epochs.py  test_experiment.py  test_load_pipeline.py  test_parc.py  test_sample_experiment.py
eelbrain/_experiment/trf/: __init__.py  estimator.py  job.py  model.py  nodes.py  predictor.py
eelbrain/_experiment/trf/tests/: test_estimator.py  test_model.py
eelbrain/_io/: fiff.py  txt.py
eelbrain/_io/tests/: test_mne.py
eelbrain/_meeg/: __init__.py  _channel_model.py  base.py  interpolation.py
eelbrain/_meeg/tests/: test_channel_model.py  test_interpolation.py
eelbrain/_stats/: permutation.py  stats.py  testnd.py  vector.py  vector2d.pyx  vector3d.pyx
eelbrain/_stats/tests/: test_permutation.py  test_stats.py  test_testnd.py
eelbrain/_utils/: basic.py  subp.py
eelbrain/_wxgui/: ID.py  __init__.py  _ch_types.py  about.py  app.py  droptarget.py  frame.py  help.py  history.py  load_stcs.py  mpl_canvas.py  pipeline_gui.py  select_channels.py  select_components.py  select_epochs.py  text.py  utils.py
eelbrain/_wxgui/tests/: test_pipeline_gui.py  test_select_channels.py  test_select_epochs.py
eelbrain/datasets/: _simple.py
eelbrain/mne_fixes/: __init__.py  _interpolation.py  _version.py
eelbrain/mne_fixes/tests/: test_interpolation.py
eelbrain/plot/: _base.py  _topo.py  _utsnd.py
eelbrain/plot/tests/: test_topo.py
eelbrain/testing/: _testing.py
eelbrain/tests/: test_data.py
examples/imagenet/: pipeline.py
examples/mass-univariate-statistics/: sensor-lm.py
examples/mouse/: sensor_analysis.py  source_analysis.py
examples/somatomotor/: somatomotor.py
